--- a/src/MultiAlign/Windows/Viewers/AnalysisView.xaml
+++ b/src/MultiAlign/Windows/Viewers/AnalysisView.xaml
@@ -2,12 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"                  
              xmlns:windows="clr-namespace:MultiAlign.Windows"   
+             xmlns:datasetViews="clr-namespace:MultiAlign.Windows.Viewers.Datasets"
              xmlns:clusterViews="clr-namespace:MultiAlign.Windows.Viewers.Clusters"
              xmlns:massTagViews="clr-namespace:MultiAlign.Windows.Viewers.MassTags"
+             xmlns:spectraViews="clr-namespace:MultiAlign.Windows.Viewers.Spectra"
+             xmlns:viewerViews="clr-namespace:MultiAlign.Windows.Viewers"
              xmlns:converters="clr-namespace:MultiAlign.Converters"
              xmlns:maCharts="clr-namespace:MultiAlignCustomControls.Charting;assembly=MultiAlignCustomControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"                  
              mc:Ignorable="d" 
              d:DesignHeight="616" d:DesignWidth="872">
     <UserControl.Resources>
@@ -35,56 +38,51 @@
                         <ColumnDefinition Width="70*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="75*"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="25*"/>
-                    </Grid.RowDefinitions>
-     
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="32"/>
+                    </Grid.RowDefinitions>     
+                    <clusterViews:ClusterTree                         
+                        x:Name="m_clusterTree"    
+                        Grid.Row="0"                                            
+                        Grid.Column="0"/>
                     <GridSplitter
-                        Grid.Row="0"
-                        Grid.RowSpan="3"
+                        Grid.Row="0"                        
                         Grid.Column="1"
-                        Width="3"
-                        
+                        Width="3"                        
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch" 
                         Background="#FF00000A" />
-                    
-                    <!-- Cluster Grid Plots -->
-                    <WindowsFormsHost                
-                        Margin="5,5,5,5"
-                        Grid.Row="2"
-                        Grid.Column="0">                        
-                        <maCharts:ctlClusterChart
-                            Title=""
-                            LegendVisible="false"
-                            YAxisShortHand="ppm"
-                            XAxisShortHand="NET"
+                    <TabControl
+                        Grid.Row="0"                                            
+                        Grid.Column="2">
+                        <TabItem                             
+                            Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                            Header="Cluster View">
+                            <clusterViews:ClusterControl
+                                Margin="5,5,5,5"
+                                x:Name="m_clusterControl"
+                                UsesDriftTime="{Binding Path=UsesDriftTime, NotifyOnSourceUpdated=True}"                        
+                                Cluster="{Binding Mode=OneWay, ElementName=m_clusterGrid, Path=SelectedCluster}"/>
+                        </TabItem>
+                        <TabItem 
                             
-                            x:Name="m_clusterPlot"
-                            />
-                    </WindowsFormsHost> 
-                    
-                        
-                    <!-- Cluster Grid Data -->
-                    <clusterViews:ClusterGrid
-                        Margin="5,5,5,5"
-                        Grid.Column="0"
-                        Grid.Row="0"
-                        x:Name="m_clusterGrid"                
-                        />
-
-
-                        <!-- Single cluster Control-->
-                    <clusterViews:ClusterControl
-                        Margin="5,5,5,5"
-                        x:Name="m_clusterControl"
-                        UsesDriftTime="{Binding Path=UsesDriftTime, NotifyOnSourceUpdated=True}"
-                        Grid.Row="0"                    
-                        Grid.RowSpan="3"
-                        Grid.Column="2"
-                        Grid.ColumnSpan="1"
-                        Cluster="{Binding Mode=OneWay, ElementName=m_clusterGrid, Path=SelectedCluster}"/>
+                            Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                            Header="All Clusters"> 
+                            <!-- Cluster Grid Plots -->
+                            <WindowsFormsHost                
+                                Margin="5,5,5,5"
+                                Grid.Row="2"
+                                Grid.Column="0">
+                                <maCharts:ctlClusterChart
+                                        Title=""
+                                        LegendVisible="false"
+                                        YAxisShortHand="ppm"
+                                        XAxisShortHand="NET"                            
+                                        x:Name="m_clusterPlot"
+                                        />
+                            </WindowsFormsHost>
+                        </TabItem>
+                    </TabControl>                        
                 </Grid>
             </TabItem>
             <TabItem                
@@ -97,7 +95,7 @@
                 Visibility="{Binding Path=HasIdentifications,
                                 Converter={StaticResource ResourceKey=BoolVisibilityConverter}}"
                 >
-                <massTagViews:MassTagViewer
+                <viewerViews:MassTagViewer
                     x:Name="m_massTagViewer"
                     UseDriftTime="{Binding Path=UsesDriftTime, NotifyOnSourceUpdated=True}"
                     />
@@ -117,7 +115,7 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <windows:DatasetListBox  
+                    <datasetViews:DatasetListBox  
                         Width="160"
                         x:Name="m_datasetBox"/>   
                     <GridSplitter
@@ -130,13 +128,12 @@
                         >
                         
                     </GridSplitter>
-                    <windows:MsMsViewer                        
+                    <viewerViews:MsMsViewer                        
                         Grid.Row="0"
                         Grid.Column="2"
                         SelectedDataset="{Binding Path=SelectedDataset, ElementName=m_datasetBox}"
-                    x:Name="m_msmsViewer">
-
-                    </windows:MsMsViewer>
+                        x:Name="m_msmsViewer">
+                    </viewerViews:MsMsViewer>
                 </Grid>
             </TabItem>
             <TabItem
@@ -257,7 +254,7 @@
                 Style="{DynamicResource ResourceKey=SimpleTabItem}"
                 Header="Datasets"                
                 >
-                <windows:DatasetGrid
+                <datasetViews:DatasetGrid
                     x:Name="m_datasetsName"/>
             </TabItem>
             <TabItem
