--- a/src/MultiAlign/Windows/Wizard/DatasetSelection.xaml
+++ b/src/MultiAlign/Windows/Wizard/DatasetSelection.xaml
@@ -2,18 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"               
              xmlns:ui="clr-namespace:MultiAlign.Windows.Wizard"
              xmlns:converters="clr-namespace:MultiAlign.Converters"
              mc:Ignorable="d" d:DesignHeight="561" d:DesignWidth="790">
     <UserControl.Resources>
         <converters:SearchOptionConverter x:Key="SearchOptionConverter"></converters:SearchOptionConverter>
         <converters:DatasetPathConverter x:Key="DatasetPathConverter"></converters:DatasetPathConverter>
-        <converters:HasPathConverter x:Key="HasPathConverter"/>
-        
-        <converters:DatasetFolderPathConverter x:Key="DatasetFolderPathConverter"></converters:DatasetFolderPathConverter>
-
-        
+        <converters:HasPathConverter x:Key="HasPathConverter"/>        
+        <converters:DatasetFolderPathConverter x:Key="DatasetFolderPathConverter"></converters:DatasetFolderPathConverter>        
     </UserControl.Resources>
     <Grid
         Background="White"
@@ -162,13 +159,22 @@
             Margin="2,2,2,2"
             Grid.Row="3"
             ItemsSource="{Binding Path=Analysis.MetaData.Datasets}"
-            HorizontalContentAlignment="Center"            
-            AlternatingRowBackground="WhiteSmoke"
+            HorizontalContentAlignment="Center"                
             AlternationCount="1" 
             AutoGenerateColumns="False"
             CanUserReorderColumns="True"               
             CanUserAddRows="False"                           
-            CanUserSortColumns="True">            
+            CanUserSortColumns="True">
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="#FF3399FF">
+                            </Setter>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.RowStyle>
             <DataGrid.Columns >
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
