--- a/src/MultiAlign/Windows/Wizard/SelectBaselinesAndOptions.xaml
+++ b/src/MultiAlign/Windows/Wizard/SelectBaselinesAndOptions.xaml
@@ -13,6 +13,9 @@
         <converters:DatasetPathConverter    x:Key="DatasetNameConverter"/>
         <converters:DatasetColorConverter   x:Key="datasetConverter"   IsDataset="True"/>
         <converters:DatasetColorConverter   x:Key="databaseConverter"  IsDataset="False"/>
+
+        <converters:DatasetColorConverter   x:Key="databaseLocalConverter"   IsDataset="True"/>
+        <converters:DatasetColorConverter   x:Key="databaseServerConverter"  IsDataset="False"/>
     </UserControl.Resources>
     <Grid
         Background="White"
@@ -138,48 +141,51 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition />
                 </Grid.RowDefinitions>
+                
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <Label 
-                        Grid.Row="0"
-                        Grid.ColumnSpan="4"
-                        HorizontalContentAlignment="Left"
-                        Margin="0,10,10,20"
-                        >Select a database for alignment, peak matching (identification), or both</Label>
+                <RadioButton
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Margin="5"
+                    FontSize="16">
+                    Use Local Database
+                </RadioButton>
+                <RadioButton
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Margin="5"
+                    IsChecked="{Binding Path=IsDatabaseDms, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"
+                    FontSize="16">
+                    Use Server Database
+                </RadioButton>
 
-                <ToggleButton 
-                        Grid.Column="0"
-                        Grid.Row="1"      
-                        HorizontalAlignment="Right"    
-                        Style="{DynamicResource ResourceKey=SimpleToggleButtonStyle}"    
-                        Width="128"
-                        Margin="5" Checked="ToggleButton_Checked">Use Local Database</ToggleButton>
-                <TextBox Grid.Column="1" 
-                             Grid.Row="1" 
-                             Text="{Binding Path=Analysis.Options.MassTagDatabaseOptions.DatabaseFilePath, Mode=TwoWay}"
-                             Margin="10,5,10,5"/>
+                <Label Grid.Column="1" 
+                             Grid.Row="0" 
+                             Content="{Binding Path=Analysis.Options.MassTagDatabaseOptions.DatabaseFilePath, Mode=TwoWay}"
+                             Margin="10,5,10,5"/>                
+                <Button Grid.Column="2" 
+                        Grid.Row="0" 
+                        Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"
+                        Width="100" Margin="5,5,5,0" x:Name="BrowseForFolderButton" Click="BrowseForFolderButton_Click">Browse</Button>                
                 
-                <Button Grid.Column="2" Grid.Row="1" Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"
-                        Width="100" Margin="5,5,5,0" x:Name="BrowseForFolderButton" Click="BrowseForFolderButton_Click">Browse</Button>
-                
+                <Label      Grid.Column="1" 
+                            Grid.Row="1" 
+                            Content="{Binding Path=SelectedDatabaseServer.DatabaseName, Mode=OneWay}"
+                            Margin="10,5,10,5"/>
 
-
-                <ToggleButton 
-                    Visibility="Hidden"
-                    Grid.Column="0" 
-                                  Grid.Row="2"      
-                                  Style="{DynamicResource ResourceKey=SimpleToggleButtonStyle}"
-                                  HorizontalAlignment="Right"  
-                                  VerticalAlignment="Top"
-                                  Width="128" 
-                                  Height="32"  
-                                  Margin="5">Use MTS Database</ToggleButton>
+                <Button Grid.Column="2"
+                        Grid.Row="1" 
+                        Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"
+                        Width="100" 
+                        Margin="5,5,5,0" 
+                        x:Name="buttonFindPNNL" 
+                        Click="buttonFindPNNL_Click">Find</Button>
                 <Label                        
                     Visibility="Hidden"
                             Grid.Column="1" 
@@ -193,7 +199,7 @@
                             HorizontalAlignment="Right" 
                             Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}"
                             Width="100" 
-                            Margin="5" >Select MTDB</Button>
+                            Margin="5" >Select MTDB</Button>                
             </Grid>
         </GroupBox>
     </Grid>
